@@ -1847,11 +1847,23 @@ class ClosurePhase(object):
                 tres = NP.diff(rawlst[:,0]).min() # in hours
                 textent = rawlst[:,0].max() - rawlst[:,0].min() + tres # in hours
                 eps = 1e-10
+                if 'prelim' not in self.cpinfo['processed']:
+                    self.cpinfo['processed']['prelim'] = {}
+                no_change_in_lstbins = False
                 if lstbinsize > tres:
                     lstbinsize = NP.clip(lstbinsize, tres, textent)
                     lstbins = NP.arange(rawlst[:,0].min(), rawlst[:,0].max() + tres + eps, lstbinsize)
                     nlstbins = lstbins.size
                     lstbins = NP.concatenate((lstbins, [lstbins[-1]+lstbinsize+eps]))
+                    if nlstbins > 1:
+                        lstbinintervals = lstbins[1:] - lstbins[:-1]
+                        lstbincenters = lstbins[:-1] + 0.5 * lstbinintervals
+                    else:
+                        lstbinintervals = NP.asarray(lstbinsize).reshape(-1)
+                        lstbincenters = lstbins[0] + 0.5 * lstbinintervals
+                    self.cpinfo['processed']['prelim']['lstbins'] = lstbincenters
+                    self.cpinfo['processed']['prelim']['dlstbins'] = lstbinintervals
+                    no_change_in_lstbins = False
                 else:
                     # Perform no binning and keep the current LST resolution, data and weights
 
@@ -1859,20 +1871,20 @@ class ClosurePhase(object):
                     lstbinsize = tres
                     lstbins = NP.arange(rawlst[:,0].min(), rawlst[:,0].max() + lstbinsize + eps, lstbinsize)
                     nlstbins = lstbins.size - 1
+                    if nlstbins > 1:
+                        lstbinintervals = lstbins[1:] - lstbins[:-1]
+                    else:
+                        lstbinintervals = NP.asarray(lstbinsize).reshape(-1)
+                    self.cpinfo['processed']['prelim']['dlstbins'] = lstbinintervals
+                    self.cpinfo['processed']['prelim']['lstbins'] = lstbins[:-1]
+                    # Ensure that the LST bins are inside the min/max envelope to
+                    # error-free interpolation later
+                    self.cpinfo['processed']['prelim']['lstbins'][0] += eps
+                    self.cpinfo['processed']['prelim']['lstbins'][-1] -= eps
+                    no_change_in_lstbins = True
 
-                if nlstbins > 1:
-                    lstbinintervals = lstbins[1:] - lstbins[:-1]
-                    lstbincenters = lstbins[:-1] + 0.5 * lstbinintervals
-                else:
-                    lstbinintervals = NP.asarray(lstbinsize).reshape(-1)
-                    lstbincenters = lstbins[0] + 0.5 * lstbinintervals
                 counts, lstbin_edges, lstbinnum, ri = OPS.binned_statistic(rawlst[:,0], statistic='count', bins=lstbins)
                 counts = counts.astype(NP.int)
-    
-                if 'prelim' not in self.cpinfo['processed']:
-                    self.cpinfo['processed']['prelim'] = {}
-                self.cpinfo['processed']['prelim']['lstbins'] = lstbincenters
-                self.cpinfo['processed']['prelim']['dlstbins'] = lstbinintervals
     
                 if 'wts' not in self.cpinfo['processed']['prelim']:
                     outshape = (counts.size, self.cpinfo['processed']['native']['eicp'].shape[1], self.cpinfo['processed']['native']['eicp'].shape[2], self.cpinfo['processed']['native']['eicp'].shape[3])
@@ -1885,7 +1897,10 @@ class ClosurePhase(object):
                 cp_tmad = NP.zeros(outshape)
                     
                 for binnum in xrange(counts.size):
-                    ind_lstbin = ri[ri[binnum]:ri[binnum+1]]
+                    if no_change_in_lstbins:
+                        ind_lstbin = [binnum]
+                    else:
+                        ind_lstbin = ri[ri[binnum]:ri[binnum+1]]
                     if 'wts' not in self.cpinfo['processed']['prelim']:
                         indict = self.cpinfo['processed']['native']
                     else:
@@ -2106,11 +2121,21 @@ class ClosurePhase(object):
                 tres = NP.diff(rawlst[:,0]).min() # in hours
                 textent = rawlst[:,0].max() - rawlst[:,0].min() + tres # in hours
                 eps = 1e-10
+                no_change_in_lstbins = False
                 if lstbinsize > tres:
                     lstbinsize = NP.clip(lstbinsize, tres, textent)
                     lstbins = NP.arange(rawlst[:,0].min(), rawlst[:,0].max() + tres + eps, lstbinsize)
                     nlstbins = lstbins.size
                     lstbins = NP.concatenate((lstbins, [lstbins[-1]+lstbinsize+eps]))
+                    if nlstbins > 1:
+                        lstbinintervals = lstbins[1:] - lstbins[:-1]
+                        lstbincenters = lstbins[:-1] + 0.5 * lstbinintervals
+                    else:
+                        lstbinintervals = NP.asarray(lstbinsize).reshape(-1)
+                        lstbincenters = lstbins[0] + 0.5 * lstbinintervals
+                    self.cpinfo['errinfo']['lstbins'] = lstbincenters
+                    self.cpinfo['errinfo']['dlstbins'] = lstbinintervals
+                    no_change_in_lstbins = False
                 else:
                     # Perform no binning and keep the current LST resolution
 
@@ -2119,16 +2144,20 @@ class ClosurePhase(object):
                     lstbins = NP.arange(rawlst[:,0].min(), rawlst[:,0].max() + lstbinsize + eps, lstbinsize)
                     nlstbins = lstbins.size - 1
 
-                if nlstbins > 1:
-                    lstbinintervals = lstbins[1:] - lstbins[:-1]
-                    lstbincenters = lstbins[:-1] + 0.5 * lstbinintervals
-                else:
-                    lstbinintervals = NP.asarray(lstbinsize).reshape(-1)
-                    lstbincenters = lstbins[0] + 0.5 * lstbinintervals
+                    if nlstbins > 1:
+                        lstbinintervals = lstbins[1:] - lstbins[:-1]
+                    else:
+                        lstbinintervals = NP.asarray(lstbinsize).reshape(-1)
+                    self.cpinfo['errinfo']['dlstbins'] = lstbinintervals
+                    self.cpinfo['errinfo']['lstbins'] = lstbins[:-1]
+                    # Ensure that the LST bins are inside the min/max envelope to
+                    # error-free interpolation later
+                    self.cpinfo['errinfo']['lstbins'][0] += eps
+                    self.cpinfo['errinfo']['lstbins'][-1] -= eps
+                    no_change_in_lstbins = True
+                    
                 counts, lstbin_edges, lstbinnum, ri = OPS.binned_statistic(rawlst[:,0], statistic='count', bins=lstbins)
                 counts = counts.astype(NP.int)
-                self.cpinfo['errinfo']['lstbins'] = lstbincenters
-                self.cpinfo['errinfo']['dlstbins'] = lstbinintervals
                 outshape = (counts.size, wts_daybins.shape[1], self.cpinfo['processed']['native']['eicp'].shape[2], self.cpinfo['processed']['native']['eicp'].shape[3])
                 wts_lstbins = NP.zeros(outshape)
                 eicp_tmean = NP.zeros(outshape, dtype=NP.complex128)
@@ -2136,7 +2165,10 @@ class ClosurePhase(object):
                 cp_trms = NP.zeros(outshape)
                 cp_tmad = NP.zeros(outshape)
                 for binnum in xrange(counts.size):
-                    ind_lstbin = ri[ri[binnum]:ri[binnum+1]]
+                    if no_change_in_lstbins:
+                        ind_lstbin = [binnum]
+                    else:
+                        ind_lstbin = ri[ri[binnum]:ri[binnum+1]]
                     wts_lstbins[binnum,:,:,:] = NP.sum(wts_daybins[ind_lstbin,:,:,:].data, axis=0)
                     eicp_tmean[binnum,:,:,:] = NP.exp(1j*NP.angle(MA.mean(NP.exp(1j*cp_dmean[ind_lstbin,:,:,:]), axis=0)))
                     eicp_tmedian[binnum,:,:,:] = NP.exp(1j*NP.angle(MA.median(NP.cos(cp_dmedian[ind_lstbin,:,:,:]), axis=0) + 1j * MA.median(NP.sin(cp_dmedian[ind_lstbin,:,:,:]), axis=0)))
